Fix frontmatter number on mobile

--- a/src/app/frontmatter.scss
+++ b/src/app/frontmatter.scss
@@ -136,7 +136,8 @@ body:not(.is-mobile) {
 
 body.is-mobile {
   .metadata-property-key-input,
-  .metadata-property-value {
+  .metadata-property-value,
+  .metadata-input-number {
     background-color: transparent !important;
     padding: 4px 8px !important;
   }
